[gd_scene load_steps=45 format=3 uid="uid://bbdgbvjs71tyx"]

[ext_resource type="Script" uid="uid://bn5nktlffrqh6" path="res://Scenes/Character/Enemy/Large/Eye/enemy_eye.gd" id="1_pck17"]
[ext_resource type="Texture2D" uid="uid://0gujff5x3kkb" path="res://Scenes/Character/Enemy/Large/Eye/eye.png" id="1_ukyxd"]
[ext_resource type="Texture2D" uid="uid://chvvpnxps22j6" path="res://Scenes/Character/Enemy/Large/Eye/eye_emission_1.png" id="2_8p0no"]
[ext_resource type="Texture2D" uid="uid://cvb5wth4cjqw2" path="res://Scenes/Character/Enemy/Large/Eye/eyelids-sheet.png" id="2_eb62f"]
[ext_resource type="Texture2D" uid="uid://d1nbhxicklaem" path="res://Scenes/Character/Enemy/Large/Eye/eye_emission_2.png" id="3_5j4ji"]
[ext_resource type="Texture2D" uid="uid://1l4ysg5yxn2f" path="res://Scenes/Character/Enemy/Large/Eye/eye_pupil-sheet.png" id="5_e4v5t"]

[sub_resource type="SphereShape3D" id="SphereShape3D_cnaou"]
radius = 0.740082

[sub_resource type="AtlasTexture" id="AtlasTexture_7ek2s"]
atlas = ExtResource("5_e4v5t")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_w2ata"]
atlas = ExtResource("5_e4v5t")
region = Rect2(16, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_k64ra"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7ek2s")
}],
"loop": true,
"name": &"Round",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w2ata")
}],
"loop": true,
"name": &"Tall",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_4odib"]
atlas = ExtResource("2_eb62f")
region = Rect2(37, 0, 37, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_hb18c"]
atlas = ExtResource("2_eb62f")
region = Rect2(74, 0, 37, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_ilxaj"]
atlas = ExtResource("2_eb62f")
region = Rect2(111, 0, 37, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_bj6hh"]
atlas = ExtResource("2_eb62f")
region = Rect2(148, 0, 37, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_gyadg"]
atlas = ExtResource("2_eb62f")
region = Rect2(185, 0, 37, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_d8wj7"]
atlas = ExtResource("2_eb62f")
region = Rect2(148, 0, 37, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_hguow"]
atlas = ExtResource("2_eb62f")
region = Rect2(111, 0, 37, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_no3jp"]
atlas = ExtResource("2_eb62f")
region = Rect2(74, 0, 37, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_yv72i"]
atlas = ExtResource("2_eb62f")
region = Rect2(37, 0, 37, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_f63mu"]
atlas = ExtResource("2_eb62f")
region = Rect2(37, 0, 37, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_s1mpq"]
atlas = ExtResource("2_eb62f")
region = Rect2(74, 0, 37, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_c03bg"]
atlas = ExtResource("2_eb62f")
region = Rect2(111, 0, 37, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_t8k40"]
atlas = ExtResource("2_eb62f")
region = Rect2(148, 0, 37, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_ioaka"]
atlas = ExtResource("2_eb62f")
region = Rect2(185, 0, 37, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_36gkc"]
atlas = ExtResource("2_eb62f")
region = Rect2(185, 0, 37, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_8i3uq"]
atlas = ExtResource("2_eb62f")
region = Rect2(148, 0, 37, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_hov4o"]
atlas = ExtResource("2_eb62f")
region = Rect2(111, 0, 37, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_mw70w"]
atlas = ExtResource("2_eb62f")
region = Rect2(74, 0, 37, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_ddqay"]
atlas = ExtResource("2_eb62f")
region = Rect2(37, 0, 37, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_tytik"]
atlas = ExtResource("2_eb62f")
region = Rect2(37, 0, 37, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_gl5bo"]
atlas = ExtResource("2_eb62f")
region = Rect2(74, 0, 37, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_ltdq0"]
atlas = ExtResource("2_eb62f")
region = Rect2(111, 0, 37, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_70ah5"]
atlas = ExtResource("2_eb62f")
region = Rect2(148, 0, 37, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_kvrbo"]
atlas = ExtResource("2_eb62f")
region = Rect2(185, 0, 37, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_nvr16"]
atlas = ExtResource("2_eb62f")
region = Rect2(148, 0, 37, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_usxid"]
atlas = ExtResource("2_eb62f")
region = Rect2(111, 0, 37, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_nv0we"]
atlas = ExtResource("2_eb62f")
region = Rect2(74, 0, 37, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_2gpil"]
atlas = ExtResource("2_eb62f")
region = Rect2(37, 0, 37, 37)

[sub_resource type="AtlasTexture" id="AtlasTexture_m1nx6"]
atlas = ExtResource("2_eb62f")
region = Rect2(0, 0, 37, 37)

[sub_resource type="SpriteFrames" id="SpriteFrames_vgeah"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_4odib")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hb18c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ilxaj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bj6hh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gyadg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_d8wj7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hguow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_no3jp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yv72i")
}],
"loop": false,
"name": &"Blink",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f63mu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s1mpq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c03bg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t8k40")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ioaka")
}],
"loop": false,
"name": &"Close",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_36gkc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8i3uq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hov4o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mw70w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ddqay")
}],
"loop": false,
"name": &"Open",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tytik")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gl5bo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ltdq0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_70ah5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kvrbo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nvr16")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_usxid")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nv0we")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2gpil")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m1nx6")
}],
"loop": false,
"name": &"Open_full",
"speed": 10.0
}]

[sub_resource type="Animation" id="Animation_74l14"]
resource_name = "Idle"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite/Emission_1:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.6, 1, 1.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(0.392157, 0.392157, 0.392157, 1), Color(0.27451, 0.27451, 0.27451, 1), Color(0.27451, 0.27451, 0.27451, 1), Color(0.392157, 0.392157, 0.392157, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite/Emission_2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0.352941, 0.352941, 0.352941, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite/Pupil:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_iej2i"]
resource_name = "Shoot"
length = 4.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite/Emission_1:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0.392157, 0.392157, 0.392157, 1), Color(0.392157, 0.392157, 0.392157, 1), Color(0, 0, 0, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite/Emission_2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 1), Color(1, 1, 1, 1)]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.8, 1.1, 1.4, 3.4, 3.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"values": [{
"args": [],
"method": &"open"
}, {
"args": [],
"method": &"shoot"
}, {
"args": [],
"method": &"shoot"
}, {
"args": [],
"method": &"shoot"
}, {
"args": [],
"method": &"blink"
}, {
"args": [],
"method": &"idle"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite/Pupil:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3, 3.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, false, true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Projectile Detection/CollisionShape3D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.2, 3.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [false, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_vhdxb"]
_data = {
"Idle": SubResource("Animation_74l14"),
"Shoot": SubResource("Animation_iej2i")
}

[sub_resource type="SphereShape3D" id="SphereShape3D_dfbj0"]
radius = 5.0

[node name="Enemy_Eye" type="CharacterBody3D"]
transform = Transform3D(3, 0, 0, 0, 3, 0, 0, 0, 3, 0, 0, 0)
script = ExtResource("1_pck17")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.108097, 1.0908, -0.0625004)
shape = SubResource("SphereShape3D_cnaou")

[node name="Sprite" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 1, 0)

[node name="Base" type="Sprite3D" parent="Sprite"]
visible = false
pixel_size = 0.05
texture_filter = 0
texture = ExtResource("1_ukyxd")

[node name="Emission_1" type="Sprite3D" parent="Sprite"]
sorting_offset = 1.0
modulate = Color(0, 0, 0, 1)
pixel_size = 0.05
texture_filter = 0
texture = ExtResource("2_8p0no")

[node name="Emission_2" type="Sprite3D" parent="Sprite"]
sorting_offset = 2.0
pixel_size = 0.05
texture_filter = 0
texture = ExtResource("3_5j4ji")

[node name="Pupil" type="AnimatedSprite3D" parent="Sprite"]
sorting_offset = 3.0
pixel_size = 0.05
texture_filter = 0
sprite_frames = SubResource("SpriteFrames_k64ra")
animation = &"Tall"

[node name="Eyelids" type="AnimatedSprite3D" parent="Sprite"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
sorting_offset = 4.0
pixel_size = 0.05
texture_filter = 0
sprite_frames = SubResource("SpriteFrames_vgeah")
animation = &"Open_full"
autoplay = "Open"

[node name="Node" type="Node" parent="."]

[node name="Orbit Timer" type="Timer" parent="Node"]
unique_name_in_owner = true

[node name="Pupil Timer" type="Timer" parent="Node"]
unique_name_in_owner = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_vhdxb")
}
autoplay = "Idle"

[node name="Projectile Detection" type="Area3D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="CollisionShape3D" type="CollisionShape3D" parent="Projectile Detection"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("SphereShape3D_dfbj0")
disabled = true

[node name="attack_container" type="Node" parent="."]

[connection signal="timeout" from="Node/Orbit Timer" to="." method="_on_orbit_timer_timeout"]
[connection signal="timeout" from="Node/Pupil Timer" to="." method="flicker_look"]
[connection signal="body_entered" from="Projectile Detection" to="." method="_on_projectile_detection_body_entered"]
